changes for seo

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="We got The Best things from Amazon."
+      content="Top8.uk is the ultimate destination for finding the best products available on Amazon. We hand-pick and curate only the best items, so you can be sure that you're getting the best of the best."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/thetop8logo.ico" />
     <!--
@@ -38,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Top8</title>
+    <title>Top8.uk - Best deals on your favorite products from Amazon </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
