--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
       name="description"
       content="Top8.uk is the ultimate destination for finding the best products available on Amazon. We hand-pick and curate only the best items, so you can be sure that you're getting the best of the best."
     />
+    <link rel="canonical" href="https://top8.uk">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="Cameras, Gaming Chairs, Garden furniture, Mother Boards">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/thetop8logo.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
